<resources>
    <string name="app_name">Tres en Raya</string>
    <string name="un_jugador">1 Jugador</string>
    <string name="dos_jugadores">2 Jugadores</string>
    <string name="facil">Fácil</string>
    <string name="normal">Normal</string>
    <string name="dificil">Dificil</string>
    <string name="casilla">Casilla</string>
    <string name="o_gana">¡O gana!</string>
    <string name="x_gana">¡X gana!</string>
    <string name="empate">Empate</string>
</resources>