<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/padding_pantalla"
    android:weightSum="1"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="265dp" />

    <TextView
        android:id="@+id/txVTitulo"
        style="@style/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button

        android:id="@+id/btnUnJugador"
        style="@style/boton"
        android:text="@string/un_jugador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <Button
        android:id="@+id/btnDosJugadores"
        style="@style/boton"
        android:layout_marginBottom="28dp"
        android:text="@string/dos_jugadores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnDosJugadores"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUnJugador">

        <RadioButton
            android:id="@+id/rBtnFacil"
            style="@style/radio"
            android:text="@string/facil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <RadioButton
            android:id="@+id/rBtnNormal"
            style="@style/radio"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/radioButton"
            style="@style/radio"
            android:text="@string/dificil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
    </RadioGroup>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="3"
        app:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/a1"
            style="@style/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/a2"
            style="@style/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/a3"
            android:src="@drawable/x"
            style="@style/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/b1"
            style="@style/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/b2"
            android:src="@drawable/o"
            style="@style/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/b3"
            style="@style/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/c1"
            android:src="@drawable/o"
            style="@style/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/c2"
            android:src="@drawable/x"
            style="@style/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/c3"
            style="@style/casilla"
            tools:ignore="SpeakableTextPresentCheck" />


    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>